service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
